<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/azulModulo1.2"
    tools:context=".views.activity_registro_usuario">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text_titulo_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crear_cuenta"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="italic|bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="16dp"/>


            <ImageView
                android:id="@+id/image_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/logo_crear_cuenta" />

            <EditText
                android:id="@+id/textView_Nombre_usuario"
                android:layout_width="230dp"
                android:layout_height="49dp"
                android:hint="@string/nombre_registro_usuario"
                android:inputType="text"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                android:background="@drawable/border"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                />

            <EditText
                android:id="@+id/textView_Correo_registro"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:hint="@string/correo_electronico_registro_usuario"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                android:background="@drawable/border"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                />

            <EditText
                android:id="@+id/textView_Contraseña_registro"
                android:layout_width="230dp"
                android:layout_height="47dp"
                android:hint="@string/pass_registro_usuario"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                android:background="@drawable/border"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/textView_Confirmacion_registro"
                android:layout_width="230dp"
                android:layout_height="52dp"
                android:hint="@string/confirmacion_pass_registro_usuario"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                android:background="@drawable/border"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>


            <TextView
                android:id="@+id/textViewOr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:text="---------  or  ---------"
                android:textColor="@color/white"
                android:textSize="18dp"/>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"/>



            <Button
                android:id="@+id/ButtonRegistroExitoso"
                android:layout_width="185dp"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:textSize="13sp"
                android:text="Start to learn"
                android:textColor="@color/white"
                android:backgroundTint="@color/botones_amarillos_inicio_sesion" />

            <ImageView
                android:id="@+id/image_nombre_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"

                android:src="@drawable/nombre_registro" />

        </LinearLayout>


    </ScrollView>
</LinearLayout>
